1. Add quantus and captum as submodules. 2. Update pyproject.toml to include quantus with torch and transformers extra. 3. Update .gitignore to ignore .vscode and .npy files. 4. Add pd.concat to support pandas 2.0 and above in Tutorial_Introduction_to_AI_Interpretability_Course_2022.ipynb. 5. Update function references in Quantus.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "captum",
-    "quantus",
+    "datasets>=4.5.0",
+    "ipykernel>=7.2.0",
+    "quantus[torch,transformers]",
+    "seaborn>=0.13.2",
+    "torchvision>=0.25.0",
 ]
 
 [tool.uv.sources]
-captum = { path = "../captum", editable = true }
-quantus = { path = "../Quantus", editable = true }
+quantus = { path = "./modules/Quantus", editable = true }
+captum = { path = "./modules/captum", editable = true }
