Add medmnist dependency and update lock files
- Added medmnist version 3.0.2 to pyproject.toml dependencies.
- Updated uv.lock to include medmnist and its dependencies.
- Added fire version 0.7.1 to uv.lock with its dependencies.
- Updated termcolor to version 3.3.0 in uv.lock.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "captum",
     "datasets>=4.5.0",
     "ipykernel>=7.2.0",
+    "medmnist>=3.0.2",
     "quantus[torch,transformers]",
     "seaborn>=0.13.2",
     "torchvision>=0.25.0",
